--- a/app/src/main/res/layout/activity_activity_admin.xml
+++ b/app/src/main/res/layout/activity_activity_admin.xml
@@ -15,8 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout11"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_above="@+id/linearLayout13"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <ImageView
             android:layout_width="250dp"
@@ -32,15 +33,16 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout12"
-        android:layout_below="@+id/linearLayout11"
-        android:layout_centerHorizontal="true">
+        android:layout_above="@+id/linearLayout51"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="35dp">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/editText8"
             android:layout_gravity="center_horizontal"
-            android:hint="UserName" />
+            android:hint="@string/username" />
     </LinearLayout>
 
     <LinearLayout
@@ -48,7 +50,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout13"
-        android:layout_below="@+id/linearLayout12"
+        android:layout_above="@+id/linearLayout12"
         android:layout_centerHorizontal="true">
 
         <EditText
@@ -56,17 +58,17 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText9"
             android:layout_gravity="center_horizontal"
-            android:hint="Password" />
+            android:hint="@string/Password" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout13"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="51dp">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/linearLayout51">
 
         <Button
             android:layout_width="wrap_content"
@@ -85,6 +87,24 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:onClick="buttom3onClick" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="32dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Admin"
+            android:id="@+id/textView35"
+            android:textSize="@dimen/h3"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
 </RelativeLayout>
