--- a/app/src/main/res/layout/activity_activity_register.xml
+++ b/app/src/main/res/layout/activity_activity_register.xml
@@ -35,7 +35,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User_id"
+            android:text="@string/user_id"
             android:id="@+id/textView2"
             android:textSize="@dimen/h1" />
 
@@ -56,7 +56,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User_name"
+            android:text="@string/user_name"
             android:id="@+id/textView3"
             android:textSize="@dimen/h1" />
 
@@ -77,7 +77,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
+            android:text="@string/email"
             android:id="@+id/textView4"
             android:textSize="@dimen/h1" />
 
@@ -97,7 +97,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone"
+            android:text="@string/phone"
             android:id="@+id/textView5"
             android:textSize="@dimen/h1" />
 
@@ -118,7 +118,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Password"
+            android:text="@string/Password"
             android:id="@+id/textView6"
             android:textSize="@dimen/h1" />
 
