--- a/app/src/main/res/layout/activity_activity_admin.xml
+++ b/app/src/main/res/layout/activity_activity_admin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,57 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.n56j.project1.ActivityAdmin"
     android:background="@drawable/wall22">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout11"
-        android:layout_above="@+id/linearLayout13"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="200dp"
-            android:id="@+id/imageView2"
-            android:src="@android:drawable/ic_secure"
-            android:adjustViewBounds="false"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout12"
-        android:layout_above="@+id/linearLayout51"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText8"
-            android:layout_gravity="center_horizontal"
-            android:hint="@string/username" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout13"
-        android:layout_above="@+id/linearLayout12"
-        android:layout_centerHorizontal="true">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText9"
-            android:layout_gravity="center_horizontal"
-            android:hint="@string/Password" />
-    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -105,6 +55,60 @@
             android:id="@+id/textView35"
             android:textSize="@dimen/h3"
             android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout13"
+        android:layout_above="@+id/linearLayout51"
+        android:layout_alignLeft="@+id/linearLayout12"
+        android:layout_alignStart="@+id/linearLayout12"
+        android:layout_marginBottom="62dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText9"
+            android:layout_gravity="center_horizontal"
+            android:hint="@string/Password" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout11"
+        android:layout_marginBottom="16dp"
+        android:layout_above="@+id/linearLayout12"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:id="@+id/imageView2"
+            android:src="@android:drawable/ic_secure"
+            android:adjustViewBounds="false"
+            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/question_man" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout12"
+        android:layout_above="@+id/linearLayout13"
+        android:layout_centerHorizontal="true">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText8"
+            android:layout_gravity="center_horizontal"
+            android:hint="@string/username" />
     </LinearLayout>
 
 </RelativeLayout>
