--- a/app/src/main/res/layout/activity_activity_register.xml
+++ b/app/src/main/res/layout/activity_activity_register.xml
@@ -10,141 +10,156 @@
     tools:context="com.example.n56j.project1.ActivityRegister"
     android:background="@drawable/wall22">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout5">
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="com.example.n56j.project1.ActivityRegisterAdmin"
+        android:background="@drawable/wall22"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Register"
-            android:id="@+id/textView"
-            android:textSize="@dimen/h3"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+            android:id="@+id/button7"
+            android:layout_alignParentBottom="true"
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout5"
-        android:id="@+id/linearLayout6">
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_id"
-            android:id="@+id/textView2"
-            android:textSize="@dimen/h1" />
-
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText3" />
-    </LinearLayout>
+            android:id="@+id/linearLayout14"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout6"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout7">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Register"
+                android:id="@+id/textView7"
+                android:textSize="@dimen/h3"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_name"
-            android:id="@+id/textView3"
-            android:textSize="@dimen/h1" />
-
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText4" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout7"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout8">
+            android:layout_below="@+id/linearLayout14"
+            android:padding="15dp"
+            android:layout_marginTop="50dp"
+            android:background="#82ffffff">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/email"
-            android:id="@+id/textView4"
-            android:textSize="@dimen/h1" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout15"
+                android:layout_centerHorizontal="true">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText5" />
-    </LinearLayout>
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:text="@string/User"
+                    android:id="@+id/textView8"
+                    android:textSize="@dimen/h1"
+                    android:textStyle="normal|bold"
+                    android:layout_width="0dp"
+                    android:layout_weight="1" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout8"
-        android:layout_centerHorizontal="true">
+                <EditText
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:id="@+id/editText101" />
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/phone"
-            android:id="@+id/textView5"
-            android:textSize="@dimen/h1" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout16"
+                android:layout_below="@+id/linearLayout15"
+                android:layout_centerHorizontal="true">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText6" />
-    </LinearLayout>
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:text="@string/Password"
+                    android:id="@+id/textView9"
+                    android:textSize="@dimen/h1"
+                    android:textStyle="normal|bold"
+                    android:layout_width="0dp"
+                    android:layout_weight="1" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout9">
+                <EditText
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editText111"
+                    android:inputType="text"
+                    android:layout_width="0dp"
+                    android:layout_weight="2" />
+            </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Password"
-            android:id="@+id/textView6"
-            android:textSize="@dimen/h1" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout19"
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText7" />
-    </LinearLayout>
+                android:layout_centerHorizontal="true">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout9"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp"
-        android:id="@+id/linearLayout10"></LinearLayout>
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:id="@+id/textView12"
+                    android:textSize="@dimen/h1"
+                    android:textStyle="normal|bold"
+                    android:layout_width="0dp"
+                    android:layout_weight="1" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Register"
-        android:id="@+id/button4"
-        android:layout_below="@+id/linearLayout10"
-        android:layout_centerHorizontal="true"
-        android:textSize="@dimen/h2" />
+                <EditText
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editText141"
+                    android:inputType="text"
+                    android:layout_width="0dp"
+                    android:layout_weight="2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout20"
+                android:layout_below="@+id/linearLayout19"
+                android:layout_centerHorizontal="true">
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:text="Phone"
+                    android:id="@+id/textView13"
+                    android:textSize="@dimen/h1"
+                    android:textStyle="normal|bold"
+                    android:layout_width="0dp"
+                    android:layout_weight="1" />
+
+                <EditText
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editText151"
+                    android:inputType="text"
+                    android:layout_width="0dp"
+                    android:layout_weight="2" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
