--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/editText200"
             android:layout_gravity="center_horizontal"
             android:hint="@string/username" />
     </LinearLayout>
@@ -55,27 +55,9 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText2"
+            android:id="@+id/editText201"
             android:layout_gravity="center_horizontal"
             android:hint="@string/Password" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout4"
-        android:layout_above="@+id/linearLayout50"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Login"
-            android:id="@+id/button"
-            android:layout_gravity="center_horizontal"
-            android:onClick="buttom8onClick" />
     </LinearLayout>
 
     <LinearLayout
@@ -120,6 +102,24 @@
             android:text="@string/pbru"
             android:id="@+id/textView34"
             android:textSize="@dimen/h3" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout4"
+        android:layout_marginBottom="32dp"
+        android:layout_above="@+id/linearLayout50"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Login"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal"
+            android:onClick="buttom8onClick" />
     </LinearLayout>
 
 </RelativeLayout>
